Feat: [Add search bar component]

--- a/src/components/Company.scss
+++ b/src/components/Company.scss
@@ -9,6 +9,12 @@
     padding: 0.4rem;
   }
 
+  input {
+    width: 100%;
+    outline: none;
+    padding: 1rem;
+  }
+
   .company-header {
     display: flex;
     align-items: center;
